--- a/index.html
+++ b/index.html
@@ -109,6 +109,17 @@
             class="mdi-content-mail small"></i><span>Contact</span></a>
       </li>
 
+      
+      <li class="bold">
+        <!-- 
+        1. mdi-communication-contacts
+        2. mdi-content-mail
+        3. mdi-communication-email
+        -->
+        <a aria-label="Navigate to the Places Travelled section" href="#places travelled" class="waves-effect waves-dark teal-text"><i
+            class="mdi-content-mail small"></i><span>Places Travelled</span></a>
+      </li>
+
       <li class="bold">
         <!--
         ICONS:
@@ -161,6 +172,10 @@
       <li class="bold">
         <a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark teal-text"><i
             class="mdi-content-mail small"></i><span>Contact</span></a>
+      </li>
+      <li class="bold">
+        <a aria-label="Navigate to the Places Travelled section" href="#places travelled" class="waves-effect waves-dark teal-text"><i
+            class="mdi-content-mail small"></i><span>Places Travelled</span></a>
       </li>
       <li class="bold">
         <a aria-label="Open Varad's Resume in a new tab"
@@ -678,7 +693,7 @@
             </div>
 
     <!-- Eight Section: Contact -->
-    <section id="contact" class="section scrollspy full-height">
+    <section id="contact" class="section scrollspy">
       <h3 class="page-title white-text teal">Contact</h3>
       <div class="container">
         <p>
@@ -703,6 +718,26 @@
         </p>
       </div>
     </section>
+
+<!-- Nine Section: Places Travelled -->
+<section id="places-travelled" class="section scrollspy">
+  <h3 class="page-title white-text teal">Places Travelled</h3>
+  
+  <!-- Google Map Embed -->
+  <div class="map-container" style="width: 100%; height: 500px; margin-bottom: 20px;">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19904.585458439346!2d-116.2115691751555!3d51.420082294765365!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x53775d28a0e1ce11%3A0x3c373c7b6365bce6!2sLake%20Louise%2C%20AB%20T0L%201E0!5e0!3m2!1sen!2sca!4v1757740586902!5m2!1sen!2sca" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </div>
+
+  <!-- List or card of visited places -->
+  <div class="card">
+    <div class="card-content center-align">
+      <h4 class="brown-text light">Banff</h4>
+      <img src="assets/img/banff.jpg" class="responsive-img" style="max-width: 80%; border-radius: 10px; margin-top: 10px;">
+      <p class="brown-text text-darken-2">Beautiful mountains and Lake Louise in Banff.</p>
+    </div>
+  </div>
+</section>
+
   </main>
 
   <!-- typed.js -->
