--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <!-- mdi-av-web small
              mdi-av-my-library-books small-->
         <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark teal-text"><i
-            class="mdi-av-my-library-books small"></i><span>Projects</span></a>
+            class="mdi-av-my-library-books small"></i><span>Recent Projects</span></a>
       </li>
 
       <li class="bold">
@@ -158,7 +158,7 @@
       </li>
       <li class="bold">
         <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark teal-text"><i
-            class="mdi-av-my-library-books small"></i><span>Projects</span></a>
+            class="mdi-av-my-library-books small"></i><span>Recent Projects</span></a>
       </li>
       <li class="bold">
         <a aria-label="Navigate to the Skills section" href="#skills" class="waves-effect waves-dark teal-text"><i
@@ -443,130 +443,19 @@
   </div>
 </div>
 
-    <!-- Fourth Section: Projects -->
-    <section id="projects" class="section scrollspy">
-      <h3 class="page-title white-text teal">Projects</h3>
-      <div class="container">
-        <div class="row">
-
-          <div class="col s12 m6 l4">
-            <div class="card medium">
-              <div class="card-image waves-effect waves-block waves-light">
-                <img alt="music streaming app" src="/assets/img/cnn.png" style="height: 100%; width: 100%" class="activator" />
-              </div>
-              <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Skin Cancer Detection CNN<i
-                    class="mdi-navigation-more-vert right"></i></span>
-                <p>
-                  An AI Convolutional Neural Network (CNN) that classifies skin leisons.
-                </p>
-              </div>
-              <div class="card-reveal">
-                <!-- TODO: change this -- only close button -->
-                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
-                <span class="card-title grey-text"><small>Accomplishments</small><i
-                    class="mdi-navigation-close right"></i></span>
-                <ul>
-                  <li><b>Tools:</b> Python, Pandas, Numpy, PyTorch, Git, Google Colab</li>
-                  <li>Designed a Convolutional Neural Network (CNN) Artificial Intelligence (AI) model, classifying 10K+ images of skin lesions into 7 classes, including both malignant (cancerous) and benign (non-cancerous) types by Deep Learning.</li>
-
-
-                </ul>
-                <div class="card-action">
-                  <a aria-label="Visit " href="https://galvanic-music.herokuapp.com/" target="_blank" data-position="top"
-                    data-tooltip="View Online"
-                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-                      class="fa fa-external-link"></i></a>
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/music-player"
-                    target="_blank" data-position="top" data-tooltip="View Source"
-                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-                      class="fa fa-github"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col s12 m6 l4">
-            <div class="card medium">
-              <div class="card-image waves-effect waves-block waves-light">
-                <img alt="quiz app" src="/assets/img/giselle.jpg" style="height: 100%; width: 100%" class="activator" />
-              </div>
-              <div class="card-content">
-                <span class="card-title activator teal-text hoverline">GISelle<i
-                    class="mdi-navigation-more-vert right"></i></span>
-                <p>
-                  A Geographic Information System (GIS) made by women, for women. 
-                </p>
-              </div>
-              <div class="card-reveal">
-                <!-- TODO: change this -- only close button -->
-                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
-                <span class="card-title grey-text"><small>Accomplishments</small><i
-                    class="mdi-navigation-close right"></i></span>
-                <ul>
-                  <li><b>Tools:</b> C++, Glade, Git, OpenStreetMap AP</li>
-                  <li>Designed the map’s Graphical User Interface (GUI), targeting users’ stellar usability and responsiveness.</li>
-                  <li>Developed and optimized algorithms and heuristics (i.e. 2-Opt, Multi-Start, Travelling Salesman, Simulated Annealing) which improved the quality of results, and managed version control with a team of 3.</li>
-
-                </ul>
-                <div class="card-action">
-                  <a aria-label="Visit " href="https://quiz-up-app.herokuapp.com/" target="_blank" data-position="top"
-                    data-tooltip="View Online"
-                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-                      class="fa fa-external-link"></i></a>
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/QuizUp"
-                    target="_blank" data-position="top" data-tooltip="View Source"
-                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-                      class="fa fa-github"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- Gyroball Project -->
-          <div class="col s12 m6 l4">
-            <div class="card medium">
-              <div class="card-image waves-effect waves-block waves-light">
-                <img alt="Screenshot of web app" src="/assets/img/gyroball.png"
-                style="height: 100%; width: 100%" class="activator" />
-              </div>
-              <div class="card-content">
-                <span class="card-title activator teal-text hoverline">Gyroball<i
-                    class="mdi-navigation-more-vert right"></i></span>
-                <p>
-                  A game of the classic Gyroball.
-                </p>
-              </div>
-              <div class="card-reveal">
-                <!-- TODO: change this -- only close button -->
-                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
-                <span class="card-title teal-text"><small>Accomplishments</small><i
-                    class="mdi-navigation-close right"></i></span>
-                <ul>
-                  <li><b>Tools:</b> C, Assembly, CPULator</li>
-                  <li>Connected keys on the Personal System/2 (PS2) Keyboard and Video Graphics Array (VGA) that helps draw and render the graphics throughout the game, guiding the user to interact with the Monitor’s display.</li>
-                  <li>Programmed using C onto the Field Programmable Gate Array (FPGA) of a DE1-SoC board operating on the Nios-V Processor, and debugged using CPULator.</li>
-
-
-                </ul>
-                <div class="card-action">
-                  <a aria-label="Visit Blog website" href="https://flask-heroku-blog.herokuapp.com/" target="_blank" data-position="top"
-                    data-tooltip="View Online"
-                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-                      class="fa fa-external-link"></i></a>
-                  <a aria-label="Visit the GitHub repo for  project" href="https://github.com/varadbhogayata/flask-blog"
-                    target="_blank" data-position="top" data-tooltip="View Source"
-                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
-                      class="fa fa-github"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <!-- ************* -->
-        </div>
-      </div>
-    </section>
+<!-- Fourth Section: Projects -->
+<section id="projects" class="section scrollspy">
+  <h3 class="page-title white-text teal">Recent Projects</h3>
+  <div class="container">
+    <!-- Container for dynamically inserted projects -->
+    <div id="recent-projects" class="row"></div>
+    
+    <!-- Load More button -->
+    <div class="center-align" style="margin-top: 20px;">
+      <button id="load-more" class="btn teal">Load More</button>
+    </div>
+  </div>
+</section>
 
     <!-- Fifth Section: Skills -->
     <section id="skills" class="section scrollspy">
@@ -769,6 +658,7 @@
       })
     })
   </script>
+  <script src="assets/js/projects.js"></script>
 </body>
 
 </html>
